Apply requested changes from pr
By:
Co-authored-by: LPTP1Dev <51876648+lptp1dev@users.noreply.github.com>